fixed rental app modal popup alignment

--- a/frontend/stylesheet/styles.css
+++ b/frontend/stylesheet/styles.css
@@ -120,6 +120,6 @@
 
 #rentalApp {
     display: flex;
-    margin-left: 10em;
+    margin-left: 8vw;
     margin-top: 20px;
 }
